# comsol-simulation-toolkit

./: .env.template  .gitignore  .skillspector.yaml  CHANGES_FROM_V0.md  LICENSE  PACKAGE_SUMMARY.md  README.md  SECURITY.md  pyproject.toml
comsol_toolkit/: __init__.py  comsol_helpers.py  comsol_interface.py  config.py  io_utils.py  modal_matrix.py
docs/: cross_platform.md
tests/: test_comsol_helpers.py  test_comsol_interface.py  test_cross_platform.py  test_error_handling.py  test_io_utils.py  test_modal_matrix.py
