[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comsol-simulation-toolkit"
version = "0.1.0"
description = "Cross-platform Python toolkit for automated COMSOL Multiphysics workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "otakuclover", email = "otakuclover@users.noreply.github.com"}
]
keywords = ["COMSOL", "FEM", "simulation", "modal analysis", "eigenfrequency", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "JPype1>=1.4.0",
    "mph>=1.2.0",
    "python-dotenv>=0.19.0",  # For .env file support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-mock>=3.10",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
hdf5 = [
    "h5py>=3.7.0",  # For HDF5 output format
]
visualization = [
    "matplotlib>=3.5.0",
    "plotly>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/otakuclover/comsol-simulation-toolkit"
Repository = "https://github.com/otakuclover/comsol-simulation-toolkit"
Issues = "https://github.com/otakuclover/comsol-simulation-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["comsol_toolkit*"]

[tool.setuptools.package-data]
comsol_toolkit = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "requires_comsol: tests that require COMSOL installation",
    "slow: slow-running tests",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
